fix: confirm-signup page textfield and button misalign
fix: font not properly display when deployed to vercel

--- a/app/(auth)/confirm-signup/confirmSignUp.module.scss
+++ b/app/(auth)/confirm-signup/confirmSignUp.module.scss
@@ -90,7 +90,6 @@
       margin-bottom: 1rem;
   
       @media (min-width: 480px) {
-        margin-bottom: 0;
         margin-left: 1.5rem;
       }
     }
