--- a/app/(auth)/create-account2/signup.module.scss
+++ b/app/(auth)/create-account2/signup.module.scss
@@ -28,7 +28,7 @@
         flex: 1;
         margin-right: 2rem;
         margin-bottom: 0;
-      }
+      } 
 
       .loginLogo {
         width: 50px;
@@ -49,7 +49,7 @@
     .form {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      // gap: 1rem;
 
       @media (min-width: 768px) {
         flex: 1;
